[project]
name = "tempo-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mythical-Github", email = "67753356+Mythical-Github@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.9.6",
    "requests>=2.33.1",
    "tomlkit>=0.14.0",
]

[project.scripts]
tempo-cache = "tempo_cache:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
