[project]
name = "tempo-binary-tool-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mythical-Github", email = "67753356+Mythical-Github@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.9.6",
    "requests>=2.33.1",
    "tempo-settings",
    "tomlkit>=0.14.0",
]

[project.scripts]
tempo_binary_tool_manager = "tempo_binary_tool_manager:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
tempo-settings = { git = "https://www.github.com/Tempo-Organization/tempo-settings" }

[tool.ruff.lint]
select = [
    "ANN",
    "PTH",
    "N",
    "BLE",
    "YTT",
    "ASYNC",
    "B",
    "A",
    "COM",
    "C4",
    "EXE",
    "FA",
    "INT",
    "PIE",
    "T20",
    "PYI"
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
